# gMaxLinked

./: .gitignore  .sconsign.dblite  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  SConstruct  config.status  configure  configure.ac  gMaxLinked.conf  gMaxLinked.sh  gMaxLinkedd  glinkd  log4crc
client/c/: common.c  connection.c  connection_info.h  message.c  message.h
client/java/msg/: Extra.java  Header.java  Msg.java  MsgExtra.java  MsgHandshakeRes.java  MsgHandshakeResAck.java  MsgId.java  MsgPushRes.java  MsgPushResAck.java  MsgReadyReq.java  MsgReadyRes.java  MsgReq.java  MsgRes.java
client/java/network/: Connection.java  ConnectionDelegate.java
client/java/tool/: NetworkDataHelper.java
clients/c/: bridge.c  bridge.h  common.c  common.h  connection.c  connection.h  connection_info.h  main.c  message.c  message.h  size.h
clients/java/src/com/example/conf/: Config.java  Size.java
clients/java/src/com/example/msg/: Ack.java  Header.java  MsgDefine.java  MsgHandshake.java  MsgHelper.java  MsgReq.java  MsgRes.java  MsgSegment.java
clients/java/src/com/example/network/: Connection.java  ConnectionDelegate.java  Tester.java
clients/java/src/com/example/tool/: Log.java  NetworkDataHelper.java
src/: Makefile  Makefile.am  Makefile.in  gLink.cpp  gMaxLinked.cpp
src/.deps/: gLink.Po
src/common/: BaseType.h  CAutoLock.cpp  CAutoLock.h  CAutoPtr.h  CBase.cpp  CBase.h  CCond.cpp  CCond.h  CConfReader.cpp  CConfReader.h  CIniReader.cpp  CIniReader.h  CLock.h  CLoopBuffer.cpp  CLoopBuffer.h  CMutex.cpp  CMutex.h  CResource.h  CSem.cpp  CSem.h  CTimerManager.cpp  CTimerManager.h  CWorker.cpp  CWorker.h  IWorkable.h  Makefile.am
src/config/: Config.cpp  Config.h  DefaultConfig.h  Length.h  Makefile.am  Size.h
src/database/: CRedisOperator.cpp  CRedisOperator.h  Makefile.am  RedisStructure.md  SConscript
src/traffic/: CNode.cpp  CNode.h  CNodeGroup.cpp  CNodeGroup.h  CTrafficManager.cpp  CTrafficManager.h  Message.h  SConscript
src/transaction/: CTransaction.cpp  CTransaction.h  CTransactionManager.cpp  CTransactionManager.h  Makefile.am  SConscript
