AUTOMAKE_OPTIONS=foreign
noinst_LIBRARIES=libcommon.a
libcommon_a_SOURCES=\
    BaseType.h \
    CAutoLock.cpp \
    CAutoLock.h \
    CAutoPtr.h \
    CBase.cpp \
    CBase.h \
    CCond.cpp \
    CCond.h \
    CConfReader.cpp \
    CConfReader.h \
    CLock.h \
    CLoopBuffer.cpp \
    CLoopBuffer.h \
    CMutex.cpp \
    CMutex.h \
    CResource.h \
    CSem.cpp \
    CSem.h \
    CTimerManager.cpp \
    CTimerManager.h \
    CWorker.cpp \
    CWorker.h \
    IWorkable.h
