AUTOMAKE_OPTIONS=foreign
noinst_LIBRARIES=libtransaction.a
libtransaction_a_SOURCES=\
	CTransaction.cpp \
	CTransaction.h \
	CTransactionManager.cpp \
	CTransactionManager.h \
	../traffic/CNode.cpp \
	../traffic/CNode.h \
	../traffic/CNodeGroup.cpp \
	../traffic/CNodeGroup.h \
	../traffic/CTrafficManager.cpp \
	../traffic/CTrafficManager.h \
	../traffic/Message.h
